Huge update, auth setup
Signed-off-by: jkalinic <jkalinic@redhat.com>